# Cosmic_python_app

./: .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
src/cosmic_python/: flask_app.py  model.py  orm.py  repository.py  services.py
src/cosmic_python/adapters/: orm.py  repository.py
src/cosmic_python/domain/: model.py
src/cosmic_python/entrypoints/: flask_app.py
src/cosmic_python/service_layer/: services.py
tests/: conftest.py  test_allocate.py  test_api.py  test_batches.py  test_orm.py  test_repository.py  test_services.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
